business-skill-track/episode-generator_biz/0.04/references/business-interface.md
# 业务接口声明

本文件是分集规划师与工程侧之间的唯一字段合同。工程按这里声明的字段名称、类型和层级取值；`episode-output-schema.md`负责字段内容和一致性要求，本文件负责接口结构。

## 接口规则

- 初次生成读取 `游戏企划`、`角色描述`、`场景描述`、`道具描述`四个正式上游字段。
- 顶层输出固定为 `分集结构`、`分集列表`两个列表。
- `分集结构`是交付拓扑，明确区分`剧集节点`与`选择节点`；`分集列表`只保存剧集对象，每集严格使用十一个一级字段。
- 角色、场景、道具只使用上游正式名称或已登记别名，不输出资产工程 ID。
- 情绪脊、拓扑哈希、路径状态、资产索引、首次出场证据、正文哈希、复检包、复检回执、门禁状态、错误摘要和缓存路径都属于 Skill 内部验证数据，不是业务输出字段。
- 修改、重做、评审或恢复所需的已有完整结果、修改要求和允许修改范围是调用期控制输入，不改变正式业务输出结构。

## Skill 输入字段

### 初次生成

| 字段 | 类型 | 必填 | 说明 |
|---|---|---|---|
| `游戏企划` | object | 是 | 来自大纲生成师；包含标题、目标、冲突、世界观、体量和结局。内部的`剧情节点总数建议`为可选软区间，缺失不阻塞调用。 |
| `角色描述` | list<object> | 是 | 正式角色资产；至少包含主角及剧情必需角色。 |
| `场景描述` | list<object> | 是 | 正式场景资产；上游明确无正式场景时允许为空列表。 |
| `道具描述` | list<object> | 是 | 正式道具资产；没有关键道具时允许为空列表。 |

### 修改已有分集

修改、重做、评审或恢复模式在四项上游字段之外读取：

| 字段 | 类型 | 必填 | 说明 |
|---|---|---|---|
| `已有分集结果` | object | 是 | 与本文件输出结构相同的完整当前结果，不接收局部片段作为基线。 |
| `修改要求` | string | 是 | 用户本轮要求。 |
| `允许修改范围` | object | 是 | 明确允许变化的分集编号及范围；纯台词修改使用 `dialogue` 范围。 |

## Skill 输出字段

```text
分集结构 list<object>
└─ 交付节点
   ├─ 节点编号 string
   ├─ 节点类型 string (`剧集节点` | `选择节点`)
   ├─ 分集编号 string
   ├─ 分集标题 string
   ├─ 类型 string
   ├─ 是否结局 boolean
   ├─ 单集梗概 string
   ├─ 来源分集编号 string
   ├─ 选择问题 string
   ├─ 选项列表 list<object>
   │  └─ 选项对象
   │     ├─ 选项编号 string | integer
   │     ├─ 选项文字 string
   │     └─ 目标分集编号 string
   └─ 后续节点编号列表 list<string>

分集列表 list<object>
└─ 分集对象
   ├─ 分集编号 string
   ├─ 分集标题 string
   ├─ 分集数 integer
   ├─ 选择数 integer
   ├─ 分集剧本 object
   │  ├─ 单集梗概 string
   │  └─ 完整剧本 string
   ├─ 剧本分析 object
   │  ├─ 本集冲突 string
   │  ├─ 前置节点编号列表 list<string>
   │  └─ 后续节点编号列表 list<string>
   ├─ 关联角色 list<string>
   ├─ 关联场景 list<string>
   ├─ 关联道具 list<string>
   ├─ 是否结局 boolean
   └─ 互动节点 object
      ├─ 是否为分支节点 boolean
      ├─ 是否有选择问题 boolean
      ├─ 选择问题 string
      ├─ 选项列表 list<object>
      │  └─ 选项对象
      │     ├─ 选项编号 string | integer
      │     ├─ 选项文字 string
      │     └─ 目标分集编号 string
      └─ 默认下一分集编号 string
```

## 输出约束

- `分集结构`和`分集列表`必须非空并来自同一份已冻结创作拓扑；从`分集结构`筛出的剧集节点顺序必须与`分集列表`一致。
- `分集编号`从 `episode-001`开始连续编号。
- `分集数`必须为正整数，等于剧集节点总数；`选择数`必须为非负整数，等于选择节点总数；二者在全部分集对象中保持一致。
- 输出`分集数`是创作拓扑完成后的实际剧集节点总数，不是对上游建议区间的原样回传；上游未提供节点建议也必须正常生成该值。
- 上游节点建议只约束剧集节点，不包含选择节点；交付拓扑总节点数必须等于`分集数 + 选择数`。
- 剧集节点使用`episode-xxx`节点编号；普通剧集直接指向下一剧集，分支剧集只指向自己的`choice-xxx`选择节点。选择节点按源剧集顺序连续编号，只能有一个来源剧集并指向至少两个不同目标剧集。
- 选择节点不含剧本、资产、情绪脊或结局内容；唯一入口必须是`episode-001`剧集节点，任何选择节点不得作为入口。
- `分集结构`中的剧集编号、标题、结局标记和梗概必须与十一字段分集对象一致。
- 创建、修改、重做和恢复都返回当前完整结果，不只返回变化片段。
- 任一强验证门禁失败时，不得返回可被工程当作完成结果的业务对象；只在运行时错误通道报告，不把错误或门禁字段混入上述两个正式输出列表。

## 持久化与展示边界

- `分集列表`是 Sheet3 定义的正式十一字段业务数据，按既有技术模型存储。
- `分集结构`是生成公开结构和流程图的派生交付拓扑；选择节点由分集互动确定性生成，技术侧无需为它新增独立业务表或长期维护第二份真相。
- 业务输出中没有面向玩家的摘要字段，也没有内部验证结果。前端和玩家只消费公开投射，不展示内部 Reference、门禁、哈希、回执或缓存。
